--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel-admin-ext/grid-lightbox": "^1.0",
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^2.0"
+        "laravel/ui": "^2.0",
+        "paypal/rest-api-sdk-php": "^1.14"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
